<resources>
    <string name="app_name" translatable="false">Ghost Detector - Ghost Finder</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string-array name="loading_messages">
        <item>This action may contain advertising…</item>
        <item>Loading system libraries…</item>
        <item>Loading application configuration…</item>
        <item>Loading UI resources…</item>
        <item>Connecting to server…</item>
        <item>Checking for updates…</item>
        <item>Loading executable file…</item>
    </string-array>


    <string name="onboarding_title_1">Ghost Detector Simulation</string>
    <string name="onboarding_desc_1"></string>

    <string name="onboarding_title_2">Prank Ghost Finder</string>
    <string name="onboarding_desc_2"></string>

    <string name="onboarding_title_3">Dynamic Light Effect</string>
    <string name="onboarding_desc_3"></string>

    <string name="onboarding_title_4">Fun for Halloween</string>
    <string name="onboarding_desc_4"></string>

    <string name="accept">ACCEPT</string>
    <string name="start_warning_message">Careful! \n\n If you are a very sensitive\n or scapy person \n considerate not using this \n app and close it.\n\n We care about your privacy \n and data security We keep \n this app free by showing \n ads. If you continue you \n accept to use youp data to \n tailor ads for you.</string>
    <string name="permission">Permission</string>
    <string name="continue_without_permission">Continue without permission</string>
    <string name="permission_continue">Continue</string>
    <string name="rec">REC</string>
    <string name="emf_sensors">EMF\nSensors</string>
    <string name="evp_sensors">EVP\nSensors</string>
    <string name="walk_around_slowly">Walk around\nslowly…</string>
    <string name="send">Send</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="your_subject">Your subject</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_description">No internet connection available due\nto network or service issue</string>
    <string name="try_again">Try Again</string>
    <string name="permissions_required_description">%1$s requires these\npermissions to function properly</string>
    <string name="language">Language</string>
    <string name="choose_your_subject">Choose your subject</string>
    <string name="translating">Translating…</string>
    <string name="please_wait">Please wait</string>
    <string name="rate_description">Let us know your experience 5 stars is the best\non Google Play!</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="what_tip_you_like_to_give_us">What tip you like to give us?</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_for_taking_the_time_to_rate_us_i_m_really_appreciate_that">Thank you for taking the time to rate us. I’m really appreciate that.</string>
    <string name="got_it">Got It.</string>
    <string name="emf">EMF</string>
    <string name="evp">EVP</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="continue_res">Continue</string>
    <string name="we_re_glad_to_have_you_here_again_let_s_pick_up_where_you_left_off_and_continue_your_journey">We\'re glad to have you here again. Let\'s pick up where you left off and continue your journey!</string>

</resources>