<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg_app">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="18dp"
                android:src="@drawable/ic_arrow_back_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CustomText_20_white_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_setting_box"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.hataki.ghostdetector.ui.common.ItemSettingView
                android:id="@+id/item_language"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:tint="@color/primary"
                app:iconSrc="@drawable/ic_language_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleText="@string/language" />


            <com.hataki.ghostdetector.ui.common.ItemSettingView
                android:id="@+id/item_rate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:tint="@color/primary"
                app:iconSrc="@drawable/ic_rate_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_language"
                app:titleText="@string/rate" />

            <com.hataki.ghostdetector.ui.common.ItemSettingView
                android:id="@+id/item_share"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:tint="@color/primary"
                app:iconSrc="@drawable/ic_share_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_rate"
                app:titleText="@string/share" />


            <com.hataki.ghostdetector.ui.common.ItemSettingView
                android:id="@+id/item_feedback"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:tint="@color/primary"
                app:iconSrc="@drawable/ic_feed_back_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_share"
                app:titleText="@string/feedback" />

            <com.hataki.ghostdetector.ui.common.ItemSettingView
                android:id="@+id/item_privacy"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:tint="@color/primary"
                app:iconSrc="@drawable/ic_privacy_policy_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_feedback"
                app:titleText="@string/privacy_policy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>