<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="328dp"
        android:layout_height="186dp"
        android:background="@drawable/bg_dialog_rounded"
        android:backgroundTint="@color/color_25211d"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/CustomText_16_white_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/thank_you"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/CustomText_14_white_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/thank_you_for_taking_the_time_to_rate_us_i_m_really_appreciate_that"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/primary"
            android:text="@string/got_it"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

